--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "deploy": "gh-pages -d dist",
+    "update": "git push origin main && npm run build && npm run deploy"
   },
   "dependencies": {
     "gsap": "^3.12.5",
