--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.1.4",
+    "gh-pages": "^6.3.0",
     "vite": "^5.4.10",
     "vite-plugin-vue-devtools": "^7.5.4"
   }
